--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 </div>
 <div class="footer">
     Copyright Dex Inc © 2021 All rights reserved</a>
+    <a href="https://top.gg/bot/867325033089335296">
+        <img src="https://top.gg/api/widget/status/867325033089335296.svg" alt="Dex" />
+        </a>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
