--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <div class="footer">
-    Copyright Dex Inc © 2021 All rights reserved</a>
+    Copyright Harry Madgwick © 2021 All rights reserved</a>
     <a href="https://top.gg/bot/867325033089335296">
         <img src="https://top.gg/api/widget/status/867325033089335296.svg" alt="Dex" />
         </a>
