Added Patreon Button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p class="subtitle">Dex is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features moderation, economy, music and much more!</p>
     <a class="btn btn-primary btn-lg" href="https://discord.com/api/oauth2/authorize?client_id=867325033089335296&permissions=8&scope=bot" role="button">Add Dex</a>
     <a class="btn btn-secondary btn-lg" href="https://discord.com/invite/CjJ4Q7KRMv" role="button">Support Server</a>
+    <a class="btn btn-third btn-lg" href="https://www.patreon.com/DexBot" role="button">Dex Patreon</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features">
